# amber-particle-ssh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_golden_backup_v3.sh  generate_manual.py  guide.txt  make_backup.sh  restore_animation_backup.sh  restore_golden.sh  restore_golden_v2.sh  restore_golden_v3.sh  technical_manual.html  whitepaper.ms
assets/: .gitkeep
shaders/: particle.frag  particle.vert  particle_compute.comp
src/: main.cpp
src/fonts/: ClassicFont.h  CodeProFont.h  CrtRetroFont.h  FontAsset.h  HighResFont.h  ModernTermFont.h  SegmentedFont.h  TechVectorFont.h
src/particles/: FontData.h  ParticleSystem.cpp  ParticleSystem.h
src/renderer/: ShaderManager.cpp  ShaderManager.h  TerminalWidget.cpp  TerminalWidget.h
src/scripts/: generate_font.py
src/terminal/: PortForwarder.cpp  PortForwarder.h  SshClient.cpp  SshClient.h  TerminalModel.cpp  TerminalModel.h  TerminalModel_new.cpp
src/ui/: ConnectionDialog.cpp  ConnectionDialog.h  GraphicsSettingsDialog.cpp  GraphicsSettingsDialog.h  MainWindow.cpp  MainWindow.h  TerminalTab.cpp  TerminalTab.h
